--- a/dashboard.html
+++ b/dashboard.html
@@ -240,7 +240,7 @@
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding" for="num">Team Size :</label>
-                            <input type="password" class="form-control" id="num"  ng-model="eventsFormData.SY17E010.teamSize">
+                            <input type="number" class="form-control" id="num"  ng-model="eventsFormData.SY17E010.teamSize">
                         </div>
 
                         <label>Naivete - </label> <input type="checkbox" value="Naivete"><br><br>
@@ -273,23 +273,23 @@
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 1 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E012.member1">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E012.member1">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 2 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E012.member2">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E012.member2">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 3 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E012.member3">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E012.member3">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 4 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E012.member4">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E012.member4">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 5 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E012.member5">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E012.member5">
                         </div>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E012', 'CS-1.6')">Register</button>
@@ -316,23 +316,23 @@
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 1 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E013.member1">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E013.member1">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 2 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E013.member2">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E013.member2">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 3 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E013.member3">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E013.member3">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 4 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E013.member4">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E013.member4">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 5 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E013.member5">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E013.member5">
                         </div>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E013', 'Dota-2')">Register</button>
@@ -359,19 +359,19 @@
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 1 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E014.member1">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E014.member1">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 2 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E014.member2">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E014.member2">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 3 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E014.member3">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E014.member3">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 4 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E014.member4">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E014.member4">
                         </div>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E014', 'NFS-MW')">Register</button>
@@ -398,11 +398,11 @@
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 1 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E015.member1">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E015.member1">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 2 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E015.member2">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E015.member2">
                         </div>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E015', 'Age-Of-Empires')">Register</button>
@@ -425,19 +425,19 @@
                     <div class="center-block" style="width:300px;text-align: left">
                         <div class="form-group">
                             <label class="lead min_padding">Team Name :</label>
-                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E016.teamSize">
+                            <input type="number" class="form-control" required ng-model="eventsFormData.SY17E016.teamSize">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 1 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E016.member1">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E016.member1">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 2 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E016.member2">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E016.member2">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 3 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E016.member3">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E016.member3">
                         </div>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E016', 'Mini-Militia')">Register</button>
@@ -497,19 +497,19 @@
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Team Size :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E003.teamSize">
+                            <input type="number" class="form-control" required ng-model="eventsFormData.SY17E003.teamSize">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 1 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E003.member1">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E003.member1">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 2 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E003.member2">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E003.member2">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 3 :</label>
-                            <input type="password" class="form-control" required ng-model="eventsFormData.SY17E003.member3">
+                            <input type="text" class="form-control" required ng-model="eventsFormData.SY17E003.member3">
                         </div>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E003', 'DA-Rush')">Register</button>
@@ -536,7 +536,7 @@
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding" for="num">Team Size :</label>
-                            <input type="password" class="form-control" id="num" ng-model="eventsFormData.SY17E004.teamSize">
+                            <input type="number" class="form-control" id="num" ng-model="eventsFormData.SY17E004.teamSize">
                         </div>
 
                         <label>Solo - </label> <input type="checkbox" value="Solo"><br><br>
@@ -567,7 +567,7 @@
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding" for="num">Team Size :</label>
-                            <input type="password" class="form-control" id="num" ng-model="eventsFormData.SY17E011.teamSize">
+                            <input type="number" class="form-control" id="num" ng-model="eventsFormData.SY17E011.teamSize">
                         </div>
 
                         <label>Solo - </label> <input type="checkbox" value="Writing_Contest"><br><br>
@@ -598,7 +598,7 @@
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Team Size :</label>
-                            <input type="password" class="form-control" ng-model="eventsFormData.SY17E005.teamSize">
+                            <input type="number" class="form-control" ng-model="eventsFormData.SY17E005.teamSize">
                         </div>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E005', 'Rampage')">Register</button>
@@ -625,27 +625,27 @@
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Team Size :</label>
-                            <input type="password" class="form-control" ng-model="eventsFormData.SY17E006.teamSize" required>
+                            <input type="number" class="form-control" ng-model="eventsFormData.SY17E006.teamSize" required>
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 1 :</label>
-                            <input type="password" class="form-control" ng-model="eventsFormData.SY17E006.member1" required>
+                            <input type="text" class="form-control" ng-model="eventsFormData.SY17E006.member1" required>
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 2 :</label>
-                            <input type="password" class="form-control" ng-model="eventsFormData.SY17E006.member2" required>
+                            <input type="text" class="form-control" ng-model="eventsFormData.SY17E006.member2" required>
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 3 :</label>
-                            <input type="password" class="form-control" ng-model="eventsFormData.SY17E006.member3">
+                            <input type="text" class="form-control" ng-model="eventsFormData.SY17E006.member3">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 4 :</label>
-                            <input type="password" class="form-control" ng-model="eventsFormData.SY17E006.member4">
+                            <input type="text" class="form-control" ng-model="eventsFormData.SY17E006.member4">
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Member 5 :</label>
-                            <input type="password" class="form-control" ng-model="eventsFormData.SY17E006.member5">
+                            <input type="text" class="form-control" ng-model="eventsFormData.SY17E006.member5">
                         </div>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E006', 'Hackathon')">Register</button>
@@ -672,7 +672,7 @@
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Team Size :</label>
-                            <input type="password" class="form-control" ng-model="eventsFormData.SY17E008.teamSize">
+                            <input type="number" class="form-control" ng-model="eventsFormData.SY17E008.teamSize">
                         </div>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E008', 'INC')">Register</button>
@@ -699,7 +699,7 @@
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Team Size :</label>
-                            <input type="password" class="form-control" ng-model="eventsFormData.SY17E007.teamSize">
+                            <input type="number" class="form-control" ng-model="eventsFormData.SY17E007.teamSize">
                         </div>
                         <label>SNAPSHOT - </label> <input type="checkbox" value="Writing_Contest"><br><br>
                         <label>CELLULOID - </label> <input type="checkbox" value="Spelling_Bee"><br><br>
@@ -728,7 +728,7 @@
                         </div>
                         <div class="form-group">
                             <label class="lead min_padding">Team Size :</label>
-                            <input type="password" class="form-control" ng-model="eventsFormData.SY17E009.teamSize">
+                            <input type="number" class="form-control" ng-model="eventsFormData.SY17E009.teamSize">
                         </div>
                         <label>Beat boxing/Rapping - </label> <input type="checkbox" value="Writing_Contest"><br><br>
                         <label>Dance - </label> <input type="checkbox" value="Spelling_Bee"><br><br>
